# Lightest

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  Lightest  Makefile  README.md  clangbuild.sh  configure  example.cpp  format.sh  gccbuild.sh  lightest.config  lightest.h  main  mingwbuild.bat  test.cpp
.github/workflow/: basic_tests.yml
.github/workflows/: basic_tests.yml  benchmark_tests.yml  c-cpp.yml
benchmark/: CMakeLists.txt  generate_gtest_test.py  generate_lightest_async_test.py  generate_lightest_test.py  generate_tests.sh  gtest_test.cpp  lightest_async_test.cpp  lightest_test.cpp
include/lightest/: arg_config_ext.h  async_test_ext.h  data_analysis_ext.h  lightest.h
src/: example.cpp  lightest.h  test.cpp
test/: CMakeLists.txt  async_test_ext_test.cpp  core_test.cpp  data_analysis_ext_test.cpp  test.cpp  test_failing_1.cpp  test_failing_more.cpp  test_success.cpp
