cmake_minimum_required(VERSION 3.10)

project(LightestTest)

add_executable(LightestCoreTest core_test.cpp)
target_link_libraries(LightestCoreTest lightest::lightest)
add_test(LightestCoreTest LightestCoreTest)

add_executable(LightestDataAnalysisExtTest data_analysis_ext_test.cpp)
target_link_libraries(LightestDataAnalysisExtTest lightest::lightest)
add_test(LightestDataAnalysisExtTest LightestDataAnalysisExtTest)